Replace the other Java 9 shorthands